--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,5 @@
 image:
-  - Ubuntu1804
+  - Ubuntu2004
   - Visual Studio 2019
 
 platform: x64
@@ -14,19 +14,17 @@ for:
 -
   matrix:
     only:
-      - image: Ubuntu1804
+      - image: Ubuntu2004
 
   services:
-    - mssql
     - mysql
 
   environment:
-    COMPILER: g++-8
-    DEB_NAME: "nanogis.ubuntu.1804"
+    DEB_NAME: "nanogis.ubuntu.2004"
 
   install:
-    - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
-    - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - sh: sudo add-apt-repository -y ppa:beineri/opt-qt-5.12.9-focal
+    - sh: sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
@@ -39,8 +37,8 @@ for:
 
   build_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/example/nanogis
-    - sh: qmake QMAKE_CXX=$COMPILER QMAKE_LINK=$COMPILER
-    - sh: make CXX=$COMPILER LINK=$COMPILER
+    - sh: qmake
+    - sh: make
     - sh: cd $APPVEYOR_BUILD_FOLDER
     - sh: mkdir $APPVEYOR_BUILD_FOLDER/$DEB_NAME
     - sh: mkdir $APPVEYOR_BUILD_FOLDER/$DEB_NAME/usr
@@ -48,13 +46,13 @@ for:
     - sh: mkdir $APPVEYOR_BUILD_FOLDER/$DEB_NAME/usr/local/bin
     - sh: cp $APPVEYOR_BUILD_FOLDER/example/nanogis/nanogis $APPVEYOR_BUILD_FOLDER/$DEB_NAME/usr/local/bin
     - sh: mkdir $APPVEYOR_BUILD_FOLDER/$DEB_NAME/DEBIAN
-    - sh: cp $APPVEYOR_BUILD_FOLDER/example/nanogis/control.ubuntu.1804 $APPVEYOR_BUILD_FOLDER/$DEB_NAME/DEBIAN/control
+    - sh: cp $APPVEYOR_BUILD_FOLDER/example/nanogis/control $APPVEYOR_BUILD_FOLDER/$DEB_NAME/DEBIAN/control
     - sh: dpkg-deb --build $APPVEYOR_BUILD_FOLDER/$DEB_NAME
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
-    - sh: export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_ODBC_MSSQL_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
-    - sh: make -f ./makefile.ubuntu test CXX=$COMPILER
+    - sh: export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
+    - sh: make -f ./makefile.ubuntu test
 
   artifacts:
     - path: $(DEB_NAME).deb
